Fixing search box button jumping on new line

--- a/app/assets/stylesheets/local/inputs.scss
+++ b/app/assets/stylesheets/local/inputs.scss
@@ -93,7 +93,7 @@ select {
   }
 
   .govuk-button {
-    margin-left: 11px;
+    float: right;
   }
   .search-button:hover {
     background-color: #00692f;
